@@ -196,10 +196,11 @@ static void CreateDataTree(CTibiaTree* dataTree,CTreeCtrl* treeCtrl,HTREEITEM gu
 
 void CToolItemConfig::OnToolItemconfigRefresh()
 {
+	WindowSnap(Self.Handle, Image1.Picture.Bitmap) ;
 	CancelTwoStepOperations();
 	char buf[16384];
 	CTibiaItemProxy itemProxy;
-	//itemProxy.refreshItemLists();
+	itemProxy.refreshItemLists();
 	
 	//Create Food List
 	while (m_foodList.GetCount()) m_foodList.DeleteString(0);
